rewrite-hcl/src/main/java/org/openrewrite/hcl/internal/grammar/HCLParser.java
/*
 * Copyright 2026 the original author or authors.
 * <p>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from rewrite-hcl/src/main/antlr/HCLParser.g4 by ANTLR 4.13.2
package org.openrewrite.hcl.internal.grammar;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.ArrayList;
import java.util.Iterator;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HCLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
    public static final int FOR_BRACE = 1;
    public static final int FOR_BRACK = 2;
    public static final int IF = 3;
    public static final int IN = 4;
    public static final int BooleanLiteral = 5;
    public static final int NULL = 6;
    public static final int LBRACE = 7;
    public static final int RBRACE = 8;
    public static final int ASSIGN = 9;
    public static final int Identifier = 10;
    public static final int WS = 11;
    public static final int COMMENT = 12;
    public static final int LINE_COMMENT = 13;
    public static final int NEWLINE = 14;
    public static final int NumericLiteral = 15;
    public static final int QUOTE = 16;
    public static final int HEREDOC_START = 17;
    public static final int PLUS = 18;
    public static final int AND = 19;
    public static final int EQ = 20;
    public static final int LT = 21;
    public static final int DOUBLE_COLON = 22;
    public static final int COLON = 23;
    public static final int LBRACK = 24;
    public static final int LPAREN = 25;
    public static final int MINUS = 26;
    public static final int OR = 27;
    public static final int NEQ = 28;
    public static final int GT = 29;
    public static final int QUESTION = 30;
    public static final int RBRACK = 31;
    public static final int RPAREN = 32;
    public static final int MUL = 33;
    public static final int NOT = 34;
    public static final int LEQ = 35;
    public static final int DOT = 36;
    public static final int DIV = 37;
    public static final int GEQ = 38;
    public static final int ARROW = 39;
    public static final int COMMA = 40;
    public static final int MOD = 41;
    public static final int ELLIPSIS = 42;
    public static final int TILDE = 43;
    public static final int TEMPLATE_INTERPOLATION_START = 44;
    public static final int TemplateStringLiteral = 45;
    public static final int TemplateStringLiteralChar = 46;
    public static final int HP_WS = 47;
    public static final int HP_COMMENT = 48;
    public static final int HP_LINE_COMMENT = 49;
    public static final int HTemplateLiteral = 50;
    public static final int HTemplateLiteralChar = 51;
    public static final int H_NEWLINE = 52;
    public static final int RULE_configFile = 0;
    public static final int RULE_body = 1;
    public static final int RULE_bodyContent = 2;
    public static final int RULE_attribute = 3;
    public static final int RULE_block = 4;
    public static final int RULE_blockLabel = 5;
    public static final int RULE_expression = 6;
    public static final int RULE_exprTerm = 7;
    public static final int RULE_blockExpr = 8;
    public static final int RULE_literalValue = 9;
    public static final int RULE_collectionValue = 10;
    public static final int RULE_tuple = 11;
    public static final int RULE_object = 12;
    public static final int RULE_objectelem = 13;
    public static final int RULE_qualifiedIdentifier = 14;
    public static final int RULE_forExpr = 15;
    public static final int RULE_forTupleExpr = 16;
    public static final int RULE_forObjectExpr = 17;
    public static final int RULE_forIntro = 18;
    public static final int RULE_forCond = 19;
    public static final int RULE_variableExpr = 20;
    public static final int RULE_functionCall = 21;
    public static final int RULE_functionName = 22;
    public static final int RULE_arguments = 23;
    public static final int RULE_index = 24;
    public static final int RULE_getAttr = 25;
    public static final int RULE_legacyIndexAttr = 26;
    public static final int RULE_splat = 27;
    public static final int RULE_attrSplat = 28;
    public static final int RULE_fullSplat = 29;
    public static final int RULE_operation = 30;
    public static final int RULE_unaryOp = 31;
    public static final int RULE_binaryOp = 32;
    public static final int RULE_binaryOperator = 33;
    public static final int RULE_compareOperator = 34;
    public static final int RULE_arithmeticOperator = 35;
    public static final int RULE_logicOperator = 36;
    public static final int RULE_templateExpr = 37;
    public static final int RULE_heredocTemplatePart = 38;
    public static final int RULE_heredocLiteral = 39;
    public static final int RULE_quotedTemplatePart = 40;
    public static final int RULE_stringLiteral = 41;
    public static final int RULE_templateInterpolation = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"configFile", "body", "bodyContent", "attribute", "block", "blockLabel",
			"expression", "exprTerm", "blockExpr", "literalValue", "collectionValue",
			"tuple", "object", "objectelem", "qualifiedIdentifier", "forExpr", "forTupleExpr",
			"forObjectExpr", "forIntro", "forCond", "variableExpr", "functionCall",
			"functionName", "arguments", "index", "getAttr", "legacyIndexAttr", "splat",
			"attrSplat", "fullSplat", "operation", "unaryOp", "binaryOp", "binaryOperator",
			"compareOperator", "arithmeticOperator", "logicOperator", "templateExpr",
			"heredocTemplatePart", "heredocLiteral", "quotedTemplatePart", "stringLiteral",
			"templateInterpolation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'if'", "'in'", null, "'null'", "'{'", "'}'", "'='",
			null, null, null, null, null, null, null, null, "'+'", "'&&'", "'=='",
			"'<'", "'::'", "':'", "'['", "'('", "'-'", "'||'", "'!='", "'>'", "'?'",
			"']'", "')'", "'*'", "'!'", "'<='", "'.'", "'/'", "'>='", "'=>'", "','",
			"'%'", "'...'", "'~'", null, null, null, null, null, null, null, null,
			"'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FOR_BRACE", "FOR_BRACK", "IF", "IN", "BooleanLiteral", "NULL",
			"LBRACE", "RBRACE", "ASSIGN", "Identifier", "WS", "COMMENT", "LINE_COMMENT",
			"NEWLINE", "NumericLiteral", "QUOTE", "HEREDOC_START", "PLUS", "AND",
			"EQ", "LT", "DOUBLE_COLON", "COLON", "LBRACK", "LPAREN", "MINUS", "OR",
			"NEQ", "GT", "QUESTION", "RBRACK", "RPAREN", "MUL", "NOT", "LEQ", "DOT",
			"DIV", "GEQ", "ARROW", "COMMA", "MOD", "ELLIPSIS", "TILDE", "TEMPLATE_INTERPOLATION_START",
			"TemplateStringLiteral", "TemplateStringLiteralChar", "HP_WS", "HP_COMMENT",
			"HP_LINE_COMMENT", "HTemplateLiteral", "HTemplateLiteralChar", "H_NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HCLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConfigFileContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ConfigFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterConfigFile(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitConfigFile(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitConfigFile(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ConfigFileContext configFile() throws RecognitionException {
		ConfigFileContext _localctx = new ConfigFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_configFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<BodyContentContext> bodyContent() {
			return getRuleContexts(BodyContentContext.class);
		}
		public BodyContentContext bodyContent(int i) {
			return getRuleContext(BodyContentContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterBody(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitBody(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitBody(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NULL || _la==Identifier) {
				{
				{
				setState(88);
				bodyContent();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContentContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BodyContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterBodyContent(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitBodyContent(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitBodyContent(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final BodyContentContext bodyContent() throws RecognitionException {
		BodyContentContext _localctx = new BodyContentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bodyContent);
		try {
			setState(96);
			_errHandler.sync(this);
            if (getInterpreter().adaptivePredict(_input, 1, _ctx) == 1) {
                enterOuterAlt(_localctx, 1);
                setState(94);
                attribute();
            } else if (getInterpreter().adaptivePredict(_input, 1, _ctx) == 2) {
                enterOuterAlt(_localctx, 2);
                setState(95);
                block();
            }
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(HCLParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(HCLParser.Identifier, 0); }
		public TerminalNode NULL() { return getToken(HCLParser.NULL, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterAttribute(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitAttribute(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitAttribute(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==NULL || _la==Identifier) ) {
			_errHandler.recoverInline(this);
			}
			else {
                if (_input.LA(1) == Token.EOF) {
                    matchedEOF = true;
                }
				_errHandler.reportMatch(this);
				consume();
			}
			setState(99);
			match(ASSIGN);
			setState(100);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(HCLParser.Identifier, 0); }
		public BlockExprContext blockExpr() {
			return getRuleContext(BlockExprContext.class,0);
		}
		public List<BlockLabelContext> blockLabel() {
			return getRuleContexts(BlockLabelContext.class);
		}
		public BlockLabelContext blockLabel(int i) {
			return getRuleContext(BlockLabelContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterBlock(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitBlock(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitBlock(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(Identifier);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier || _la==QUOTE) {
				{
				{
				setState(103);
				blockLabel();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			blockExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockLabelContext extends ParserRuleContext {
		public List<TerminalNode> QUOTE() { return getTokens(HCLParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(HCLParser.QUOTE, i);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(HCLParser.Identifier, 0); }
		public BlockLabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockLabel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterBlockLabel(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitBlockLabel(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitBlockLabel(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final BlockLabelContext blockLabel() throws RecognitionException {
		BlockLabelContext _localctx = new BlockLabelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_blockLabel);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(QUOTE);
				setState(112);
				stringLiteral();
				setState(113);
				match(QUOTE);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }

		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationExpressionContext extends ExpressionContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public OperationExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterOperationExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitOperationExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitOperationExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode QUESTION() { return getToken(HCLParser.QUESTION, 0); }
		public TerminalNode COLON() { return getToken(HCLParser.COLON, 0); }
		public ConditionalExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterConditionalExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitConditionalExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitConditionalExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionTermContext extends ExpressionContext {
		public ExprTermContext exprTerm() {
			return getRuleContext(ExprTermContext.class,0);
		}
		public ExpressionTermContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterExpressionTerm(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitExpressionTerm(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitExpressionTerm(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
                if (getInterpreter().adaptivePredict(_input, 4, _ctx) == 1) {
                    _localctx = new ExpressionTermContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(119);
                    exprTerm(0);
                } else if (getInterpreter().adaptivePredict(_input, 4, _ctx) == 2) {
                    _localctx = new OperationExpressionContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;
                    setState(120);
                    operation();
                }
			_ctx.stop = _input.LT(-1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
                    if (_parseListeners != null) {
                        triggerExitRuleEvent();
                    }
					_prevctx = _localctx;
					{
					{
					_localctx = new ConditionalExpressionContext(new ExpressionContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(123);
                        if (!precpred(_ctx, 1)) {
                            throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                        }
					setState(124);
					match(QUESTION);
					setState(125);
					expression(0);
					setState(126);
					match(COLON);
					setState(127);
					expression(2);
					}
					}
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprTermContext extends ParserRuleContext {
		public ExprTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprTerm; }

		public ExprTermContext() { }
		public void copyFrom(ExprTermContext ctx) {
			super.copyFrom(ctx);
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParentheticalExpressionContext extends ExprTermContext {
		public TerminalNode LPAREN() { return getToken(HCLParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HCLParser.RPAREN, 0); }
		public ParentheticalExpressionContext(ExprTermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterParentheticalExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitParentheticalExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitParentheticalExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeAccessExpressionContext extends ExprTermContext {
		public ExprTermContext exprTerm() {
			return getRuleContext(ExprTermContext.class,0);
		}
		public GetAttrContext getAttr() {
			return getRuleContext(GetAttrContext.class,0);
		}
		public AttributeAccessExpressionContext(ExprTermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).enterAttributeAccessExpression(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof HCLParserListener) {
                ((HCLParserListener) listener).exitAttributeAccessExpression(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof HCLParserVisitor) {
                return ((HCLParserVisitor<? extends T>) visitor).visitAttributeAccessExpression(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}
